--- a/NineMensMorris/app/build.gradle
+++ b/NineMensMorris/app/build.gradle
@@ -32,7 +32,9 @@ android {
     }
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
+
 }
 
 dependencies {
@@ -46,4 +48,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    def lifecycle_version = "2.3.0"
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
 }
